# WizardAPI

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: routes.py
app/core/: config.py
app/domain/: models.py
app/repository/: cognito_repository.py
src/app/: main.py
src/app/core/: config.py
src/app/models/: models.py
src/app/repository/: cognito_repository.py
src/app/services/: auth_service.py
