[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "WizardAPI"
version = "0.0.1"
authors = [
  { name="Jeff Castro", email="jeff.castro9@outlook.com" }
]
description = "WWizard package"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi",
    "uvicorn",
    "boto3",
    "python-jose",
    "authlib",
    "werkzeug",
    "requests"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "django-stubs",
    "ipdb",
    "pip-tools",
]


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]

[project.urls]
API = "https://github.com/Jscastro197/WizardAPI"